syntax = "proto3";

package proto.wearables.v1;

import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";

/**
 * Data models
 */
 message MetronionStats {
    uint64 creativity = 1;
    uint64 charisma = 2;
    uint64 resolve = 3;
    uint64 fitness = 4;
    uint64 intellect = 5;
}

message Wearables {
    string id = 1;
    string type = 2;
    string name = 3;
    string gender = 4;
    string rarity = 5;
    bool changeable = 6;
    bool is_origin = 7;
    bool is_required = 8;
    string image = 9;
    MetronionStats stats = 10;
}

/**
 * Request/Response models
 */

message GetWearablesRequest {
    google.protobuf.UInt64Value id = 1;
}

message GetWearablesResponse {
    string id = 1;
    uint64 on_chain_id = 2;
    string name = 3;
    uint64 type = 4;
    uint64 created_at_timestamp = 5;
    uint64 updated_at_timestamp = 6;
    uint64 created_at_block = 7;
    uint64 updated_at_block = 8;
    uint64 total_supply = 9;
    double last_price = 10;
    double current_price = 11;
}

message GetListWearablesRequest {
    google.protobuf.StringValue account = 1;
    string sort = 2;
    int32 offset = 3;
    int32 limit = 4;
    google.protobuf.UInt64Value id = 5;
    repeated string gender = 6;
    repeated string status = 7;
    string rarity = 8;
    string type = 9;
    map<string, google.protobuf.ListValue> stat = 10;
}

message GetListWearablesResponse {
    repeated GetWearablesResponse data = 1;
    uint64 count = 2;
}

service WearablesService {
    rpc GetWearables(GetWearablesRequest) returns (GetWearablesResponse) {
       
    }
    rpc GetListWearables(GetListWearablesRequest) returns (GetListWearablesResponse) {
      
    }
}